--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-*{
+* {
     margin: 0;
     padding: 0;
     outline: 0;
@@ -8,7 +8,7 @@
     box-sizing: border-box;
 }
 
-:root{
+:root {
     --color-primary: #6c63ff;
     --color-success: #00bf8e;
     --color-warning: #f7c94b;
@@ -28,47 +28,62 @@
     --transition: all 400ms ease;
 }
 
-body{
+body {
     font-family: 'Montserrat', sans-serif;
     line-height: 1.7;
     color: var(--color-white);
     background-color: var(--color-bg);
 }
-.container{
+
+.container {
     width: var(--container-width-lg);
     margin: 0 auto;
 }
-section{
+
+section {
     padding: 6rem 0;
 }
-section h2{
+
+section h2 {
     text-align: center;
     margin-bottom: 4rem;
 }
-h1,h2,h3,h4,h5{
+
+h1,
+h2,
+h3,
+h4,
+h5 {
     line-height: 1.2;
 }
-h1{
+
+h1 {
     font-size: 2.4rem;
 }
-h2{
+
+h2 {
     font-size: 2rem;
 }
-h3{
+
+h3 {
     font-size: 1.6rem;
 }
-h4{
+
+h4 {
     font-size: 1.3rem;
 }
-a{
+
+a {
     color: var(--color-white);
 }
-img{
+
+img {
     width: 100%;
     display: block;
     object-fit: cover;
 }
-.btn{
+
+.btn {
     display: inline-block;
     background: var(--color-white);
     color: var(--color-black);
@@ -77,12 +92,14 @@ img{
     font-weight: 500;
     transition: var(--transition);
 }
-.btn:hover{
+
+.btn:hover {
     background: transparent;
     color: var(--color-white);
     border-color: var(--color-white);
 }
-.btn-primary{
+
+.btn-primary {
     background: var(--color-danger);
     color: var(--color-white);
 }
@@ -90,7 +107,7 @@ img{
 
 
 /* --------------------------- NAVBAR ----------------------------- */
-nav{
+nav {
     background: transparent;
     width: 100vw;
     height: 5rem;
@@ -98,135 +115,162 @@ nav{
     top: 0;
     z-index: 11;
 }
-.window-scroll {                                                 
+
+.window-scroll {
     background: var(--color-primary);
     box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
 }
-.nav_container{
+
+.nav_container {
     height: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-nav button{
+
+nav button {
     display: none;
 }
-.nav_menu{
+
+.nav_menu {
     display: flex;
     align-items: center;
     gap: 4rem;
 }
-.nav_menu a{
+
+.nav_menu a {
     font-size: 0.9rem;
     transition: var(--transition);
 }
-.nav_menu a:hover{
+
+.nav_menu a:hover {
     color: var(--color-bg2);
 }
 
 
 /* --------------------------- HEADER ----------------------------- */
-header{
+header {
     position: relative;
     top: 5rem;
     overflow: hidden;
     height: 70vh;
     margin-bottom: 5rem;
 }
-.header_container{
+
+.header_container {
     display: grid;
     grid-template-columns: 1fr 1fr;
     align-items: center;
     gap: 5rem;
     height: 100%;
 }
-.header_left p{
+
+.header_left p {
     margin: 1rem 0 2.4rem;
 }
 
 
 /* --------------------------- CATEGORIES ----------------------------- */
-.categories{
+.categories {
     background: var(--color-bg1);
-    height: 29rem;
+    height: 34rem;
 }
-.categories h1{
+
+.categories h1 {
     line-height: 1;
     margin-bottom: 3rem;
 }
-.categories_container{
+
+.categories_container {
     display: grid;
     grid-template-columns: 40% 60%;
 }
-.categories_left{
+
+.categories_left {
     margin-right: 4rem;
 }
-.categories_left p{
+
+.categories_left p {
     margin: 1rem 0 3rem;
 }
-.categories_right{
+
+.categories_right {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 1.2rem;
 }
-.category{
+
+.category {
     background: var(--color-bg2);
     padding: 2rem;
     border-radius: 2rem;
     transition: var(--transition);
 }
-.category:hover{
+
+.category:hover {
     box-shadow: 0 3rem 3rem 3rem rgba(0, 0, 0, 0.3);
     z-index: 1;
 }
-.category:nth-child(2) .category_icon{
+
+.category:nth-child(2) .category_icon {
     background: var(--color-danger);
 }
-.category:nth-child(3) .category_icon{
+
+.category:nth-child(3) .category_icon {
     background: var(--color-success);
 }
-.category:nth-child(4) .category_icon{
+
+.category:nth-child(4) .category_icon {
     background: var(--color-warning);
 }
-.category:nth-child(5) .category_icon{
+
+.category:nth-child(5) .category_icon {
     background: var(--color-success);
 }
-.category_icon{
+
+.category_icon {
     background: var(--color-primary);
     padding: 0.7rem;
     border-radius: 0.9rem;
 }
-.category h5{
+
+.category h5 {
     margin: 2rem 0 1rem;
 }
-.category p{
+
+.category p {
     font-size: 0.85rem;
 }
 
 
 /* --------------------------- POPULAR COURSES ----------------------------- */
-.courses{
+.courses {
     margin-top: 10rem;
 }
-.courses_container{
+
+.courses_container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 2rem;
 }
-.course{
+
+.course {
     background: var(--color-bg1);
     text-align: center;
     border: 1px solid transparent;
     transition: var(--transition);
 }
-.course:hover{
+
+.course:hover {
     background: transparent;
     border-color: var(--color-primary);
 }
-.course_info{
+
+.course_info {
     padding: 2rem;
 }
-.course_info p{
+
+.course_info p {
     margin: 1.2rem 0 2rem;
     font-size: 0.9rem;
 }
@@ -237,17 +281,18 @@ header{
 
 /* --------------------------- FAQs ----------------------------- */
 
-.faqs{
+.faqs {
     background: var(--color-bg1);
     box-shadow: inset 0 0 3rem rgba(0, 0, 0, 0.5);
 }
 
-.faqs_container{
+.faqs_container {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 1rem;
 }
-.faq{
+
+.faq {
     padding: 2rem;
     display: flex;
     align-items: center;
@@ -256,19 +301,23 @@ header{
     background: var(--color-primary);
     cursor: pointer;
 }
-.faq h4{
+
+.faq h4 {
     font-size: 1rem;
     line-height: 2.2;
 }
+
 .faq_icon {
     align-self: flex-start;
     font-size: 1.2rem;
 }
-.faq p{
+
+.faq p {
     margin-top: 0.8rem;
     display: none;
 }
-.faq.open p{
+
+.faq.open p {
     display: block;
 }
 
@@ -277,15 +326,17 @@ header{
 
 /* --------------------------- TESTIMONIALS ----------------------------- */
 
-.testimonials_container{
+.testimonials_container {
     overflow-x: hidden;
     position: relative;
     margin-bottom: 5rem;
 }
-.testimonial{
+
+.testimonial {
     padding-top: 2rem;
 }
-.avatar{
+
+.avatar {
     width: 6rem;
     height: 6rem;
     border-radius: 50%;
@@ -293,25 +344,26 @@ header{
     margin: 0 auto 1rem;
     border: 1rem solid var(--color-bg1);
 }
-.testimonial_info{
+
+.testimonial_info {
     text-align: center;
 }
-.testimonial_body{
+
+.testimonial_body {
     background: var(--color-primary);
     padding: 2rem;
     margin-top: 3rem;
     position: relative;
 }
-.testimonial_body::before{
+
+.testimonial_body::before {
     content: "";
     display: block;
-    background: linear-gradient(
-        135deg,
-        transparent,
-        var(--color-primary),
-        var(--color-primary),
-        var(--color-primary)
-    );
+    background: linear-gradient(135deg,
+            transparent,
+            var(--color-primary),
+            var(--color-primary),
+            var(--color-primary));
     width: 3rem;
     height: 3rem;
     position: absolute;
@@ -320,41 +372,168 @@ header{
     transform: rotate(45deg);
 }
 
+/* --------------------------- FOOTER ----------------------------- */
 
 
+footer {
+    background: var(--color-bg1);
+    padding-top: 5rem;
+    font-size: 0.9rem;
+}
+
+.footer_container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 5rem;
+}
+
+.footer_container>div h4 {
+    margin-bottom: 1.2rem;
+}
+
+.footer_1 p {
+    margin: 0 0 2rem;
+}
+
+footer ul li {
+    margin-bottom: 0.7rem;
+}
+
+footer ul li a:hover {
+    text-decoration: underline;
+}
+
+.footer_socials {
+    display: flex;
+    gap: 1rem;
+    font-size: 1.2rem;
+    margin-top: 2rem;
+}
+
+.footer_copyright {
+    text-align: center;
+    margin-top: 4rem;
+    padding: 1.2rem 0;
+    border-top: 1px solid var(--color-bg2);
+}
 
 
+/* --------------------------- MEDIA QUERIES (TABLETS) ----------------------------- */
+
+@media screen and (max-width: 1024px) {
+    .container {
+        width: var(--container-width-md);
+    }
+
+    h1 {
+        font-size: 2.2rem;
+    }
+    h2{
+        font-size: 1.7rem;
+    }
+    h3{
+        font-size: 1.4rem;
+    }
+    h4{
+        font-size: 1.2rem;
+    }
+
+    nav button{
+        display: inline-block;
+        background: transparent;
+        font-size: 1.8rem;
+        color: var(--color-white);
+        cursor: pointer;
+    }
+    nav button#close-menu-btn{
+        display: none;
+    }
+    .nav_menu{
+        position: fixed;
+        top: 5rem;
+        right: 5%;
+        height: fit-content;
+        width: 18rem;
+        flex-direction: column;
+        gap: 0;
+        display: none;
+    }
+    .nav_menu li{
+        width: 100%;
+        height: 5.8rem;
+        animation: animateNavItems 400ms linear forwards;
+        transform-origin: top right;
+        opacity: 0;
+    }
+    .nav_menu li:nth-child(2){
+        animation-delay: 200ms;
+    }
+    .nav_menu li:nth-child(3){
+        animation-delay: 400ms;
+    }
+    .nav_menu li:nth-child(4){
+        animation-delay: 600ms;
+    }
+    @keyframes animateNavItems {
+        0%{
+            transform: rotateZ(-90deg);
+        }
+        100%{
+            transform: rotateZ(0);
+            opacity: 1;
+        }
+    }
+    .nav_menu li a{
+        background: var(--color-primary);
+        box-shadow: -4rem 6rem 10rem rgba(0, 0, 0, 0.6);
+        width: 100%;
+        height: 100%;
+        display: grid;
+        place-items: center;
+    }
+    .nav_menu li a:hover{
+        background: var(--color-bg2);
+        color: var(--color-white);
+    }
+    header{
+        height: 52vh;
+        margin-bottom: 4rem;
+    }
+    .header_container {
+        gap: 0;
+        padding-bottom: 3rem;
+    }
 
 
+    .categories{
+        height: auto;
+    }
+    .categories_container{
+        grid-template-columns: 1fr;
+        gap: 3rem;
+    }
+    .categories_left{
+        margin-right: 0;
+    }
 
 
+    .courses{
+        margin-top: 0;
+    }
+    .courses_container{
+        grid-template-columns: 1fr 1fr;
+    }
 
 
+    .faqs_container{
+        grid-template-columns: 1fr;
+    }
+    .faq{
+        padding: 1.5rem;
+    }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    .footer_container{
+        grid-template-columns: 1fr 1fr;
+    }
+}
