--- a/styles.css
+++ b/styles.css
@@ -173,7 +173,7 @@ header {
 /* --------------------------- CATEGORIES ----------------------------- */
 .categories {
     background: var(--color-bg1);
-    height: 34rem;
+    height: 30rem;
 }
 
 .categories h1 {
@@ -428,27 +428,32 @@ footer ul li a:hover {
     h1 {
         font-size: 2.2rem;
     }
-    h2{
+
+    h2 {
         font-size: 1.7rem;
     }
-    h3{
+
+    h3 {
         font-size: 1.4rem;
     }
-    h4{
+
+    h4 {
         font-size: 1.2rem;
     }
 
-    nav button{
+    nav button {
         display: inline-block;
         background: transparent;
         font-size: 1.8rem;
         color: var(--color-white);
         cursor: pointer;
     }
-    nav button#close-menu-btn{
+
+    nav button#close-menu-btn {
         display: none;
     }
-    .nav_menu{
+
+    .nav_menu {
         position: fixed;
         top: 5rem;
         right: 5%;
@@ -458,32 +463,39 @@ footer ul li a:hover {
         gap: 0;
         display: none;
     }
-    .nav_menu li{
+
+    .nav_menu li {
         width: 100%;
         height: 5.8rem;
         animation: animateNavItems 400ms linear forwards;
         transform-origin: top right;
         opacity: 0;
     }
-    .nav_menu li:nth-child(2){
+
+    .nav_menu li:nth-child(2) {
         animation-delay: 200ms;
     }
-    .nav_menu li:nth-child(3){
+
+    .nav_menu li:nth-child(3) {
         animation-delay: 400ms;
     }
-    .nav_menu li:nth-child(4){
+
+    .nav_menu li:nth-child(4) {
         animation-delay: 600ms;
     }
+
     @keyframes animateNavItems {
-        0%{
+        0% {
             transform: rotateZ(-90deg);
         }
-        100%{
+
+        100% {
             transform: rotateZ(0);
             opacity: 1;
         }
     }
-    .nav_menu li a{
+
+    .nav_menu li a {
         background: var(--color-primary);
         box-shadow: -4rem 6rem 10rem rgba(0, 0, 0, 0.6);
         width: 100%;
@@ -491,49 +503,114 @@ footer ul li a:hover {
         display: grid;
         place-items: center;
     }
-    .nav_menu li a:hover{
+
+    .nav_menu li a:hover {
         background: var(--color-bg2);
         color: var(--color-white);
     }
-    header{
+
+    header {
         height: 52vh;
         margin-bottom: 4rem;
     }
+
     .header_container {
         gap: 0;
         padding-bottom: 3rem;
     }
 
 
-    .categories{
+    .categories {
         height: auto;
     }
-    .categories_container{
+
+    .categories_container {
         grid-template-columns: 1fr;
         gap: 3rem;
     }
-    .categories_left{
+
+    .categories_left {
         margin-right: 0;
     }
 
 
-    .courses{
+    .courses {
         margin-top: 0;
     }
-    .courses_container{
+
+    .courses_container {
         grid-template-columns: 1fr 1fr;
     }
 
 
-    .faqs_container{
+    .faqs_container {
         grid-template-columns: 1fr;
     }
-    .faq{
+
+    .faq {
         padding: 1.5rem;
     }
 
 
-    .footer_container{
+    .footer_container {
         grid-template-columns: 1fr 1fr;
+    }
+}
+
+
+@media screen and (max-width: 600px) {
+    .container {
+        width: var(--container-width-sm);
+    }
+
+    .nav_menu {
+        right: 3%;
+    }
+
+    header {
+        height: 100vh;
+    }
+
+    .header_container {
+        grid-template-columns: 1fr;
+        text-align: center;
+        margin-top: 0;
+    }
+
+    .header_left p {
+        margin-bottom: 1.3rem;
+    }
+
+    .categories_right{
+        grid-template-columns: 1fr 1fr;
+        gap: 0.7rem;
+    }
+    .category{
+        padding: 1rem;
+        border-radius: 1rem;
+    }
+    .category_icon{
+        margin-top: 4px;
+        display: inline-block;
+    }
+
+    .courses_container{
+        grid-template-columns: 1fr;
+    }
+
+    .testimonial_body{
+        padding: 1.2rem;
+    }
+
+    .faqs_container{
+        grid-template-columns: 1fr;
+        text-align: center;
+        gap: 2rem;
+    }
+    .footer_1 p{
+        margin: 1rem auto;
+    }
+    .footer_socials{
+        justify-content: center;
     }
 }
