--- a/about.css
+++ b/about.css
@@ -65,6 +65,7 @@
     border: 1px solid transparent;
     transition: var(--transition);
     position: relative;
+    overflow: hidden;
 }
 .team_member:hover{
     background: transparent;
@@ -87,17 +88,65 @@
     position: absolute;
     top: 50%;
     transform: translateY(-60%);
-    right: 0;
+    right: -100%;
     display: flex;
     flex-direction: column;
     background: var(--color-primary);
     border-radius: 1rem 0 0 1rem;
+    box-shadow: -2rem 0 2rem rgba(0, 0, 0, 0.3);
+    transition: var(--transition);
+}
+.team_member:hover .team_member_socials{
+    right: 0;
 }
 .team_member_socials a{
     padding: 0.7rem;
 }
 
 
+
+
+
+
+
+
+@media screen and (max-width: 1024px) {
+    .about_achievements{
+        margin-top: 2rem;
+    }
+    .about_achievements_container{
+        grid-template-columns: 1fr;
+        gap: 4rem;
+    }
+    .about_achievements_left{
+        width: 80%;
+        margin: 0 auto;
+    }
+    .team_container{
+        grid-template-columns: repeat(3, 1fr);
+        gap: 1.5rem;
+    }
+    .team_member{
+        padding: 1rem;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .achievements_cards{
+        grid-template-columns: 1fr 1fr;
+        gap: 0.7rem;
+    }
+    .team_container{
+        grid-template-columns: 1fr 1fr;
+        gap: 0.7rem;
+    }
+    .team_member{
+        padding: 0;
+    }
+    .team_member p{
+        margin-bottom: 1.5rem;
+    }
+}
 
 
 
